[package]
name = "bspl"
version = "1.0.0"
authors = ["Ansley Peduru <ansleypeduru96@gmail.com>"]
repository = "https://github.com/apeduru/bspl.git"
homepage = "https://github.com/apeduru/bspl"
license = "MIT"
readme = "README.md"
description = "bspl is a REPL for practising bitwise operations"
keywords = ["education", "bitwise", "operations", "repl"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"] 

[dependencies]
rustyline = "1.0.0"
tempfile = "2.1.4"
